src/objects/PagesApi__Field_Group__c.object
<CustomObject>
    <description>Field Groups store data about the behavior of a set of fields published on a web form.</description>
    <fields>
        <fullName>PagesApi__Allow_Users_to_Delete_Mapped_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** WARNING ** when checked, users will be able to delete records mapped to the field group even if they were not created by the form submitter.</description>
        <inlineHelpText>** WARNING ** when checked, users will be able to delete records mapped to the field group even if they were not created by the form submitter.</inlineHelpText>
        <label>Allow Users to Delete Mapped Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__DML_Operation__c</fullName>
        <description>The value specified in this field either creates new records (&quot;Insert&quot;) or updates existing records (&quot;Upsert&quot;).</description>
        <inlineHelpText>The value specified in this field either creates new records (&quot;Insert&quot;) or updates existing records (&quot;Upsert&quot;).</inlineHelpText>
        <label>Database Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Upsert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PagesApi__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Identifies the field group&apos;s related form.</description>
        <inlineHelpText>**Required** Identifies the field group&apos;s related form.</inlineHelpText>
        <label>Form</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipLabel>Field Groups</relationshipLabel>
        <relationshipName>Field_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Instructions__c</fullName>
        <description>The content entered in this field is displayed to end users to assist in entering data into the fields contained in the field group.</description>
        <inlineHelpText>The content entered in this field is displayed to end users to assist in entering data into the fields contained in the field group.</inlineHelpText>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Multiple__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables multiple record entries for an object on the form (like a related list).</description>
        <inlineHelpText>Enables multiple record entries for an object on the form (like a related list).</inlineHelpText>
        <label>Allow Multiple Entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Mapped_Object__c</fullName>
        <description>Specifies the target object to which records are created or updated for this field group.</description>
        <inlineHelpText>Specifies the target object to which records are created or updated for this field group.</inlineHelpText>
        <label>Mapped Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Mapped_Relationship_Field__c</fullName>
        <description>When linked to a parent field group, this field stores the api name of the lookup or master-detail field that links the two objects together.</description>
        <inlineHelpText>When linked to a parent field group, this field stores the api name of the lookup or master-detail field that links the two objects together.</inlineHelpText>
        <label>Mapped Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Order__c</fullName>
        <description>Identifies the order the Field Group is displayed on the form (Sorted Ascending).</description>
        <inlineHelpText>Identifies the order the Field Group is displayed on the form (Sorted Ascending).</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PagesApi__Parent_Field_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Parent Object for this Field Group&apos;s records.</description>
        <inlineHelpText>Specifies the Parent Object for this Field Group&apos;s records.</inlineHelpText>
        <label>Parent Field Group</label>
        <referenceTo>PagesApi__Field_Group__c</referenceTo>
        <relationshipLabel>Child Field Groups</relationshipLabel>
        <relationshipName>Field_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__SOQL_Filter__c</fullName>
        <description>Defines the filter criteria used to retrieve existing records for this Field Group.</description>
        <inlineHelpText>Defines the filter criteria used to retrieve existing records for this Field Group.</inlineHelpText>
        <label>SOQL Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Group</label>
    <nameField>
        <label>Field Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>